--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "cheerio-get-css-selector": "^2.0.0",
+    "cli-progress": "^3.12.0",
     "colors": "^1.4.0",
     "dotenv-run-script": "^0.4.1",
     "html-validate": "^8.4.0",
