--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
   "scripts": {
     "build-cli": "vite build --config vite.config.cli.js",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "cli": "export NODE_EXTRA_CA_CERTS=\"$(mkcert -CAROOT)/rootCA.pem\" && node cli.js"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "cheerio": "^1.0.0-rc.12",
     "cheerio-get-css-selector": "^2.0.0",
     "cli-progress": "^3.12.0",
     "colors": "^1.4.0",
     "html-validate": "^8.7.1",
+    "mustache": "^4.2.0",
+    "open": "^9.1.0",
     "pa11y": "^6.2.3",
+    "postcss": "^8.4.31",
+    "postcss-custom-properties": "^13.3.2",
+    "postcss-import": "^15.1.0",
+    "postcss-mixins": "^9.0.4",
     "prompts": "^2.4.2",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vite-plugin-node": "^3.1.0"
   },
   "dependencies": {
     "@types/cli-progress": "^3.11.5",
+    "@types/mustache": "^4.2.5",
     "@types/prompts": "^2.4.8"
   }
 }
