--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-# local, production
+# Options: local, production
 VITE_ENVIRONMENT="local"
-# cli, html
-VITE_OUTPUT="html" 
+
+# Options:cli-choose, cli, html
+# cli-choose: will prompt the user to choose an output (cli or html)
+VITE_OUTPUT="cli-choose" 
+
+# whether there needs to be an output to the terminal or not.
 VITE_VERBOSE="true"
