--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# local, production
-ENVIRONMENT="local"
-# cli, html
-OUTPUT="cli" 
+# Options: local, production
+VITE_ENVIRONMENT="local"
+
+# Options:cli-choose, cli, html
+# cli-choose: will prompt the user to choose an output (cli or html)
+VITE_OUTPUT="cli-choose" 
+
+# whether there needs to be an output to the terminal or not.
+VITE_VERBOSE="true"
