--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Options: local, production
-VITE_ENVIRONMENT="local"
+VITE_ENVIRONMENT="production"
 
 # Options:cli-choose, cli, html
 # cli-choose: will prompt the user to choose an output (cli or html)
