Output and retest

--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "cheerio-get-css-selector": "^2.0.0",
     "cli-progress": "^3.12.0",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "html-validate": "^8.7.1",
     "mustache": "^4.2.0",
     "open": "^9.1.0",
     "pa11y": "^6.2.3",
+    "pa11y-runner-axe": "^2.0.1",
+    "pa11y-runner-htmlcs": "^2.0.1",
     "postcss": "^8.4.31",
     "postcss-custom-properties": "^13.3.2",
     "postcss-import": "^15.1.0",
