--- a/public/frontend/manifest.json
+++ b/public/frontend/manifest.json
@@ -1,11 +1,11 @@
 {
   "src/frontend/fonts/Jost-300-cyrillic4.woff2": {
     "file": "Jost-300-cyrillic4-a6a87284.woff2",
-    "src": "src/frontend/fonts/Jost-600-cyrillic13.woff2"
+    "src": "src/frontend/fonts/Jost-900-cyrillic16.woff2"
   },
   "src/frontend/fonts/Jost-300-latin-ext5.woff2": {
     "file": "Jost-300-latin-ext5-1c489eec.woff2",
-    "src": "src/frontend/fonts/Jost-600-latin-ext14.woff2"
+    "src": "src/frontend/fonts/Jost-500-latin-ext11.woff2"
   },
   "src/frontend/fonts/Jost-300-latin6.woff2": {
     "file": "Jost-300-latin6-f5f9fabf.woff2",
@@ -17,7 +17,7 @@
   },
   "src/frontend/fonts/Jost-400-cyrillic7.woff2": {
     "file": "Jost-300-cyrillic4-a6a87284.woff2",
-    "src": "src/frontend/fonts/Jost-600-cyrillic13.woff2"
+    "src": "src/frontend/fonts/Jost-900-cyrillic16.woff2"
   },
   "src/frontend/fonts/Jost-400-latin-ext2.woff2": {
     "file": "Jost-400-latin-ext2-9c3b1556.woff2",
@@ -25,7 +25,7 @@
   },
   "src/frontend/fonts/Jost-400-latin-ext8.woff2": {
     "file": "Jost-300-latin-ext5-1c489eec.woff2",
-    "src": "src/frontend/fonts/Jost-600-latin-ext14.woff2"
+    "src": "src/frontend/fonts/Jost-500-latin-ext11.woff2"
   },
   "src/frontend/fonts/Jost-400-latin3.woff2": {
     "file": "Jost-400-latin3-52fb7cc3.woff2",
@@ -37,11 +37,11 @@
   },
   "src/frontend/fonts/Jost-500-cyrillic10.woff2": {
     "file": "Jost-300-cyrillic4-a6a87284.woff2",
-    "src": "src/frontend/fonts/Jost-600-cyrillic13.woff2"
+    "src": "src/frontend/fonts/Jost-900-cyrillic16.woff2"
   },
   "src/frontend/fonts/Jost-500-latin-ext11.woff2": {
     "file": "Jost-300-latin-ext5-1c489eec.woff2",
-    "src": "src/frontend/fonts/Jost-600-latin-ext14.woff2"
+    "src": "src/frontend/fonts/Jost-500-latin-ext11.woff2"
   },
   "src/frontend/fonts/Jost-500-latin12.woff2": {
     "file": "Jost-300-latin6-f5f9fabf.woff2",
@@ -49,11 +49,11 @@
   },
   "src/frontend/fonts/Jost-600-cyrillic13.woff2": {
     "file": "Jost-300-cyrillic4-a6a87284.woff2",
-    "src": "src/frontend/fonts/Jost-600-cyrillic13.woff2"
+    "src": "src/frontend/fonts/Jost-900-cyrillic16.woff2"
   },
   "src/frontend/fonts/Jost-600-latin-ext14.woff2": {
     "file": "Jost-300-latin-ext5-1c489eec.woff2",
-    "src": "src/frontend/fonts/Jost-600-latin-ext14.woff2"
+    "src": "src/frontend/fonts/Jost-500-latin-ext11.woff2"
   },
   "src/frontend/fonts/Jost-600-latin15.woff2": {
     "file": "Jost-300-latin6-f5f9fabf.woff2",
@@ -61,11 +61,11 @@
   },
   "src/frontend/fonts/Jost-900-cyrillic16.woff2": {
     "file": "Jost-300-cyrillic4-a6a87284.woff2",
-    "src": "src/frontend/fonts/Jost-600-cyrillic13.woff2"
+    "src": "src/frontend/fonts/Jost-900-cyrillic16.woff2"
   },
   "src/frontend/fonts/Jost-900-latin-ext17.woff2": {
     "file": "Jost-300-latin-ext5-1c489eec.woff2",
-    "src": "src/frontend/fonts/Jost-600-latin-ext14.woff2"
+    "src": "src/frontend/fonts/Jost-500-latin-ext11.woff2"
   },
   "src/frontend/fonts/Jost-900-latin18.woff2": {
     "file": "Jost-300-latin6-f5f9fabf.woff2",
@@ -87,6 +87,10 @@
     "file": "link-efb400f1.svg",
     "src": "src/frontend/icons/link.svg"
   },
+  "src/frontend/icons/retest.svg": {
+    "file": "retest-3fdba5bb.svg",
+    "src": "src/frontend/icons/retest.svg"
+  },
   "src/frontend/icons/visibility-off.svg": {
     "file": "visibility-off-1baf25c8.svg",
     "src": "src/frontend/icons/visibility-off.svg"
@@ -96,7 +100,7 @@
     "src": "src/frontend/icons/visibility.svg"
   },
   "src/frontend/js/site.css": {
-    "file": "site-2c6bf1ff.css",
+    "file": "site-d25b48ce.css",
     "src": "src/frontend/js/site.css"
   },
   "src/frontend/js/site.ts": {
@@ -111,13 +115,14 @@
       "link-efb400f1.svg",
       "copy-3575c3fd.svg",
       "check-8f2d6df5.svg",
+      "retest-3fdba5bb.svg",
       "visibility-c95003a0.svg",
       "visibility-off-1baf25c8.svg"
     ],
     "css": [
-      "site-2c6bf1ff.css"
+      "site-d25b48ce.css"
     ],
-    "file": "site-9f88da86.js",
+    "file": "site-c82a4d1f.js",
     "isEntry": true,
     "src": "src/frontend/js/site.ts"
   }
