--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Options: local, production
-VITE_ENVIRONMENT="local"
+VITE_ENVIRONMENT="production"
 
 # Options:cli-choose, cli, html
 # cli-choose: will prompt the user to choose an output (cli or html)
-VITE_OUTPUT="cli-choose" 
+VITE_OUTPUT="html" 
 
 # whether there needs to be an output to the terminal or not.
 VITE_VERBOSE="true"
