production and some docs

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ VITE_OUTPUT="cli-choose"
 
 # whether there needs to be an output to the terminal or not.
 VITE_VERBOSE="true" 
+
+# Run a local server to accomodate retesting of a page.
+VITE_RUN_SERVER="true"
