browser env var

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ VITE_VERBOSE="true"
 
 # Run a local server to accomodate retesting of a page.
 VITE_RUN_SERVER="true"
+
+# Browser to launch to show html results in
+VITE_RUN_BROWSER="google chrome"
