Update package.json with new fields
Add description and publishConfig fields to package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "a11ytester",
   "private": false,
   "version": "0.0.1",
+  "description": "",
   "type": "module",
+  "publishConfig": {
+    "registry": "http://npm.pkg.github.com/@statikbe"
+  },
   "scripts": {
     "build-cli": "vite build --config vite.config.cli.js",
     "dev": "vite",
