Configure npm publish with GitHub token
Add authentication token setup for npm registry

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -21,9 +21,8 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
           scope: '@statikbe'
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
       - run: yarn
       - run: yarn build
       - run: yarn build-cli
       - run: yarn publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
