--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -22,7 +22,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@statikbe'
       - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
-      - run: npm whoami 
+      - run: cat ~/.npmrc
       - run: yarn
       - run: yarn build
       - run: yarn build-cli
