--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -21,8 +21,7 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
           scope: '@statikbe'
-      - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
-      - run: cat ~/.npmrc
+      - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
       - run: yarn
       - run: yarn build
       - run: yarn build-cli
