--- a/cli/package.json
+++ b/cli/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "StatikCraftBaseInstall",
+  "name": "StatikCraftBaseInstallCLI",
   "private": true,
-  "version": "1.0.1",
+  "version": "0.0.1",
   "main": "cli.js",
   "author": "Statik.be",
   "license": "MIT",
